# Data-Contract-Enforcer

./: .gitignore  DATA_DISCOVERY.md  DOMAIN_NOTES.md  README.md  attributor.py  package-lock.json  pyproject.toml
adapter_api/: .env.example  README.md  app.py  openrouter_client.py  requirements.txt  run.ps1
contract_registry/: subscriptions.yaml
contracts/: __init__.py  ai_extensions.py  attributor.py  canonical.py  generator.py  odcs.py  report_generator.py  runner.py  schema_analyzer.py  utils.py
diffs/: attributor.diff  registry.diff  report_generator.diff  runner.diff  utils.diff
enforcer_report/: attribution.json  report_data.json
generated_contracts/: traces_runs.schema.yml  traces_runs.yaml  week2_verdicts.schema.yml  week2_verdicts.yaml  week3_extractions.schema.yml  week3_extractions.yaml  week5_events.schema.yml  week5_events.yaml
react-dashboard/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
reports/: google_drive_link.txt  week7_report.md
schema_snapshots/: baselines.json
scripts/: build_week7_report.py  data_discovery.py  generate_traces_runs.py  generate_week2_verdicts.py  phase0_validate.py  publish_report_google_drive.py  report_generator.py  week7_bootstrap.py  write_domain_notes.py
validation_reports/: ai_extensions.json  ai_extensions_baseline.json  embedding_baseline_week3.json  extractions.json  phase0_traces_runs.json  phase0_week1_intent_records.json  phase0_week2_verdicts.json  phase0_week3_extractions.json  phase0_week4_lineage_snapshots.json  phase0_week5_events.json  (+3 more)
(+57 files in other folders)
